<resources>
    <string name="app_name">Мой ребенок</string>
        <string name="font_name_fontawesome">fontawesome</string>
        <string name="font_name_source_sans_pro">SourceSansPro</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="attendance_text">Посещаемость</string>
    <string name="myChild">Мой ребенок</string>
    <string name="registration_in">Зарегистрироваться</string>
    <string name="signIn">Войти</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="password_confirm">Подтверждение пароля</string>
    <string name="number_kid">Номер детского сада</string>
    <string name="mail">Электронная почта</string>
    <string name="login_label">ВХОД</string>
    <string name="provider_gps">GPS</string>
    <string name="provider_network">Network</string>
    <string name="location_settings">Location settings</string>
    <string name="life_feed">Новости</string>
    <string name="life_feed_l">Живая лента</string>
    <string name="status_child">Статус ребенка</string>
    <string name="child_title">Дети</string>
    <string name="parent_item">Родители</string>
    <string name="registration">Регистрация</string>
    <string name="not_arrive">Сегодня не придет</string>
    <string name="invalid_login">Неверный логин или пароль</string>
    <string name="namespace_service">Наименование:</string>
    <string name="type_service">Вид</string>
    <string name="directed_service">Направление</string>
    <string name="s">c</string>
    <string name="po">по</string>
    <string name="add_service">Добавить</string>
    <string name="save_service">Сохранить</string>
    <string name="cancel">Отменить</string>
    <string name="deny_text">Отклонить</string>
    <string name="name_activity">Название деятельности</string>
    <string name="edit">Редактировать</string>
    <string name="delete">Удалить</string>
    <string name="group_tab_header">Группы</string>
    <string name="tutor_tab_header">Воспитатели</string>
    <string name="services_tab_header">Деятельность</string>
    <string name="calendar_tab_header">Мероприятия</string>
    <string name="directory_menu_group">Справочники</string>
    <string name="registry_menu_group">Реестры</string>
    <string name="registry_child_menu_item">Реестры детей</string>
    <string name="registry_menu_item_tutor">Реестры представителей</string>
    <string name="documents_menu_group">Документы</string>
    <string name="list_services_menu_item">Расписание</string>
    <string name="list_orders_time_menu_item">Табель учета времени воспитателей</string>
    <string name="orders_menu_group">Отчеты</string>
    <string name="payment_item_menu">Оплата</string>
    <string name="event_not_calendar">События</string>
    <string name="list_child_arr_item_menu">Посещаемость детей</string>
    <string name="list_enployee_item_menu">Учет сотрудников</string>
    <string name="communication_menu_group">Коммуникация</string>
    <string name="chats_item_menu">Чаты</string>
    <string name="exit">Выйти</string>
    <string name="addActivityTV">Добавить деятельность</string>
    <string name="socially_development">Социально - коммуникативное развитие</string>
    <string name="cognitive_development">Познавательное развитие</string>
    <string name="verbal_development">Речевое развитие</string>
    <string name="artistic_development">Художественно - эстетическое развитие</string>
    <string name="physical_development">Физическое развитие</string>
    <string name="food_care">Питание</string>
    <string name="hygiene_care">Гигиена</string>
    <string name="sleep_care">Сон</string>
    <string name="creation_care">Творчество</string>
    <string name="invalidateData">Некорректные данные</string>
    <string name="edit_header">Редактировать</string>
    <string name="invalidateNameService">Деятельность с таким именем уже существует</string>
    <string name="invalidateTime">Некорректно введено время</string>
    <string name="title_add_child">Добавить ребенка</string>
    <string name="FIO">ФИО</string>
    <string name="choice_photo">Выбрать фото</string>
    <string name="edit_text">Редактировать</string>
    <string name="delete_item">Удалить</string>
    <string name="mail_text">Электронная почта</string>
    <string name="send_message">Отправить</string>
    <string name="parent_and_child">Родители и дети</string>
    <string name="id_parent_text">Идентификатор родителя</string>
    <string name="surname_text">Фамилия</string>
    <string name="name_text">Имя</string>
    <string name="last_name_text">Отчество</string>
    <string name="error_count_item_text">Нельзя добавить больше 10 записей</string>
    <string name="communic_text">Коммуникация</string>
    <string name="successful">Успешно. Проверьте почту</string>
    <string name="list_rasp">Расписание занятий</string>
    <string name="ist_child_header">Список присутствующих детей</string>
    <string name="status_update">Статус обновлен</string>
    <string name="delete_item_status">Запись удалена</string>
    <string name="status_error_delete_item">Ошибка при удалении записи</string>
    <string name="ask_save_pass">Сохранить пароль?</string>
    <string name="activities">Деятельность</string>
    <string name="region_registration">Регион</string>
    <string name="city_registration">Город</string>
    <string name="kinder_garten_registration">Детский сад</string>
    <string name="add_group_header">Добавить группу</string>
    <string name="name_group">Название группы</string>
    <string name="id_tutor">Идентификатор воспитателя</string>
    <string name="patronymic">Отчество</string>
    <string name="add_kid_in_group_text">Добавить ребенка в группу</string>
    <string name="notification_message">Статус ребенка обновлен</string>
    <string name="back">Назад</string>
    <string name="comment">Комментарий</string>
    <string name="add_comment">Добавить комментарий</string>
    <string name="input_key">Введите ключ</string>
    <string name="id_kid">Идентификатор ребенка</string>
    <string name="add_child_header_dialog">Добавить ребенка</string>
    <string name="request_on_add">Запрос на добавление</string>
    <string name="accept_text">Принять</string>
    <string name="add_tutor_text">Добавить воспитателя</string>
    <string name="forget_pass_text">Забыли свои данные для входа?</string>
    <string name="my_kids">Мои дети</string>
    <string name="parents_text">Родители</string>
    <string name="foot_menu">Меню питания</string>
    <string name="ads_text">Объявления</string>
    <string name="setting">Настройки</string>
    <string name="identificator">Идентификатор:</string>

    <string name="messages">Сообщения</string>
    <string name="my_group">Мои группы</string>
    <string name="notification">Заявки</string>
    <string name="calendar">Календарь</string>

        <string-array name="group_spinner">
            <item>Расписание</item>
            <item>Распорядок на текущий день</item>
            <item>Календарь мероприятий</item>
            <item>Список детей</item>
       
        </string-array>

</resources>
