<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_vertical_margin">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/add_group_header"
        android:textAlignment="center"
        android:textSize="10pt"
        android:layout_marginBottom="8dp"
        android:text="@string/add_group_header"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_group"
        android:inputType="textWebEditText"
        android:layout_marginBottom="8dp"
        android:id="@+id/name_group_add_groups_dialog"/>
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/id_tutor"
        android:layout_marginBottom="8dp"
        android:id="@+id/id_tutor_add_groups_dialog"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/id_tutor"
        android:layout_marginBottom="8dp"
        android:id="@+id/id_tutor_add_groups_dialog_v"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textColor="@color/colorOrange"
            android:background="@color/colorAlphaNULL"
            android:id="@+id/cancel_button_add_group"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAlphaNULL"
            android:textColor="@color/colorOrange"
            android:text="@string/save_service"
            android:layout_weight="1"
            android:id="@+id/save_group"/>
    </LinearLayout>
</LinearLayout>