<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_horizontal_margin">
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textAlignment="center"
    android:text="@string/title_add_child"
    android:textSize="15pt"
    android:id="@+id/add_child_textTV"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:hint="@string/FIO"
        android:id="@+id/name_childET"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/choice_photo"

            android:layout_toStartOf="@+id/add_photo_buttonBT"
            android:id="@+id/path_to_photoET"/>
        <Button
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:id="@+id/add_photo_buttonBT"
            android:background="@drawable/ic_add_a_photo_black_24dp" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorForApacityNull"
            android:layout_weight="1"
            android:id="@+id/cancel_buttonBT"
            android:text="@string/cancel"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/add_child_buttonBT"
            android:background="@color/colorForApacityNull"
            android:layout_weight="1"
            android:text="@string/add_service"/>

    </LinearLayout>

</LinearLayout>