<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_margin="@dimen/activity_vertical_margin"
    android:layout_height="match_parent">
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/header_comments_status"
    android:text="@string/add_comment"
    android:textSize="12pt"
    android:textAlignment="center"
    android:layout_marginBottom="@dimen/standard_margin"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/comment"
        android:layout_below="@id/header_comments_status"
        android:id="@+id/comment_edit"
        android:layout_marginBottom="@dimen/standard_margin"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/relative_add_photo"
        android:layout_below="@+id/comment_edit">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/choice_photo"
        android:layout_toLeftOf="@+id/leaner_button"
        android:id="@+id/path_to_photoET"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/leaner_button"
            android:layout_alignParentRight="true"
            android:orientation="horizontal">
            <Button
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:id="@+id/add_photo_buttonBT"
                android:layout_toRightOf="@+id/choice_photo_buttonBT"
                android:background="@drawable/ic_add_a_photo_black_24dp" />
            <Button
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:id="@+id/choice_photo_buttonBT"
                android:background="@drawable/ic_folder_black_24dp" />
        </LinearLayout>

</RelativeLayout>
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginBottom="@dimen/standard_margin"
    android:layout_below="@id/relative_add_photo">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/cancel"
        android:background="@color/colorAlphaNULL"
        android:id="@+id/cancel_comment_dialog"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/add_service"
        android:background="@color/colorAlphaNULL"
        android:id="@+id/ok_button_comment"/>
</LinearLayout>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/image_delete"/>
</RelativeLayout>