<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_horizontal_margin">
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/request_on_add"
    android:textSize="11pt"
    android:gravity="center"
    android:id="@+id/id_header_parent_request"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/request_text_on_add"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorOrange"
            android:layout_weight="1"
            android:id="@+id/button_cancel_request"
            android:background="@color/colorAlphaNULL"
            android:text="@string/deny_text"/>
        <Button
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/colorOrange"
            android:id="@+id/button_ok_request"
            android:background="@color/colorAlphaNULL"
            android:text="@string/accept_text"/>
    </LinearLayout>
</LinearLayout>