<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_horizontal_margin">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/header_add_tutor_in_kin_dialog"
        android:text="@string/add_tutor_text"
        android:textAlignment="center"
        android:textSize="11pt"
        android:layout_marginBottom="@dimen/standard_margin"/>
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:id="@+id/tutor_without_kindergarten_spinner"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textColor="@color/colorOrange"
            android:background="@color/colorAlphaNULL"
            android:id="@+id/cancel_button_add_tutor_in_kin"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAlphaNULL"
            android:textColor="@color/colorOrange"
            android:text="@string/add_service"
            android:layout_weight="1"
            android:id="@+id/add_tutor_in_kin_button"/>
    </LinearLayout>
</LinearLayout>