<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_vertical_margin">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Добавить ребенка"
        android:id="@+id/add_learner_header"
        android:textAlignment="center"
        android:layout_margin="@dimen/standard_margin"
        android:textSize="10pt"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin"
        android:id="@+id/id_lerner_edit_text"
        android:hint="@string/input_key"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin"
        android:orientation="horizontal">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cancel_button_learner"
            android:layout_weight="1"
            android:textColor="@color/colorOrange"
            android:background="@color/colorAlphaNULL"
            android:text="@string/cancel"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ok_button_learner"
            android:textColor="@color/colorOrange"
            android:layout_weight="1"
            android:background="@color/colorAlphaNULL"
            android:text="@string/add_service"/>
    </LinearLayout>
</LinearLayout>